ASSERTION FAILED: : this != replacement() https://bugs.webkit.org/show_bug.cgi?id=159779

Reviewed by Michael Saboff.

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::jettison): If we jettison during GC, and our owner
is dead, we choose not to replace ourselves. (See
https://bugs.webkit.org/show_bug.cgi?id=159588.) So, it's possible to
invalidate and still be our owner's CodeBlock. Relax our ASSERT to allow
for this.


Canonical link: https://commits.webkit.org/177929@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203239 268f45cc-cd09-0410-ab3c-d52691b4dbfc